<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraSettings1">


        <Button
            android:id="@+id/Return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="ReturnBack"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/settings2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="GoToSettings2"
            android:text="@string/go_to_settings_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/TEST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TT"
            android:layout_width="173dp"
            android:layout_height="39dp"
            android:layout_marginTop="50dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/event_not_detected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TEST" />

        <TextView
            android:id="@+id/Settings1Label"
            android:layout_width="244dp"
            android:layout_height="34dp"
            android:layout_marginBottom="68dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/settings_1_camera_application"
            app:layout_constraintBottom_toTopOf="@+id/settings2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TTBS"
            android:layout_width="223dp"
            android:layout_height="29dp"
            android:layout_marginTop="29dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TEST" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="238dp"
            android:layout_height="45dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="260dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/insertText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="324dp"
            android:layout_marginEnd="104dp"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="Save"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="324dp"
            android:layout_marginEnd="36dp"
            android:text="@string/read"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="Read" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="112dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />


</androidx.constraintlayout.widget.ConstraintLayout>